--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
