--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-toastify": "^9.1.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^9.0.5"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
