--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.6.2",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "swiper": "^9.0.5"
   },
   "devDependencies": {
