--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "axios": "^1.2.2",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
