--- a/admin/package.json
+++ b/admin/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.6.2",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "timeago-react": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
