--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1",
-    "swiper": "^9.0.5"
+    "swiper": "^9.0.5",
+    "timeago-react": "^3.0.6"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
